--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -40,5 +40,15 @@ p.welcomeHook{
         margin: 25px;
     }
 
+    img {
+        height: 85vh;
+        margin: 7% auto;
+    }
 
 }
+
+img {
+    height: 85vh;
+    margin: 7% auto;
+}
+
