--- a/src/components/entry/header.css
+++ b/src/components/entry/header.css
@@ -5,3 +5,7 @@
         font-family: Roboto, serif;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+img {
+        margin: 2% auto;
+}
