--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,3 +1,8 @@
+body {
+    height: 100vh;
+   background-color: #e1d8ce;
+}
+
 .homePage-contentContainer{
     max-width: 90%;
     width: 800px;
@@ -26,30 +31,14 @@
     margin: 0 auto;
 }
 
-p.welcomeHook{
-    font-size: 28px;
-    margin-bottom: 50px;
-}
-
-
 @media (min-width: 768px){
     .homePageContainer{
         flex-direction: row;
     }
 
-    .landingPage-contentContainer{
-        max-width: 60%;
-        width: 800px;
-        margin: 50px auto;
-    }
-
-    .landingPage-authContainer{
-        margin: 25px;
-    }
-
     .enterImage {
         height: 85vh;
-        margin: 7% auto;
+        margin: 1% auto;
     }
 
 }
